# geosupportfm

./: README.md  README_PHASE1.md  pyproject.toml
benchmarks/: synthetic_spatial_case_study.py  synthetic_spatial_metrics.py
docs/: phase4_support_aware_geostatistics.md
examples/: phase4_factorial_cokriging.py
src/: __init__.py
src/benchmarks/: __init__.py  synthetic_spatial_analysis.py  synthetic_spatial_data.py  synthetic_spatial_models.py
src/coregionalization/: __init__.py  lmc.py
src/embeddings/: __init__.py  analysis.py  config.py  gee_sampling.py  lulc_satellite_embedding_workflow.py
src/foundations/: __init__.py  _ee.py  alphaearth.py  landsat.py  sentinel2.py
src/geosupportfm/: __init__.py
src/kriging/: __init__.py  factorial.py
src/support/: __init__.py  embedding_aggregation.py  raster_aggregation.py  regularization.py  spatial_support.py
src/variograms/: __init__.py  core.py  diagnostics.py  latent.py
src/visualization/: __init__.py  embedding_plots.py  synthetic_spatial_plots.py  variography_plots.py
tests/: test_analysis.py  test_factorial_cokriging.py  test_foundations_pure_helpers.py  test_lmc.py  test_raster_aggregation.py  test_spatial_support.py  test_support_regularization.py  test_synthetic_spatial_data.py  test_synthetic_spatial_metrics.py  test_synthetic_spatial_models.py  test_synthetic_spatial_visualization.py  test_variography.py  test_visualization.py
