[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geosupportfm"
version = "0.4.0"
description = "Support-aware geostatistical learning for geospatial foundation models"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["geosupportfm*", "coregionalization*", "embeddings*", "foundations*", "kriging*", "support*", "variograms*", "visualization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
